--- a/results.html
+++ b/results.html
@@ -241,7 +241,12 @@
                          <span><span data-i18n="resultsPage.size">尺寸</span>: <strong id="cigar-size"></strong></span>
                          <span><span data-i18n="resultsPage.origin">产地</span>: <strong id="cigar-origin"></strong></span>
                      </div>
-                     <div id="admin-actions" class="hidden mb-4">
+                    <div class="mb-4">
+                        <button id="ig-native-share-button" class="w-full md:w-auto px-4 py-3 text-white font-semibold rounded-lg shadow-lg bg-gradient-to-r from-orange-500 via-pink-500 to-purple-600 hover:shadow-xl transition-transform transform hover:-translate-y-0.5 focus:outline-none focus:ring-2 focus:ring-pink-200" onclick="shareToInstagramNative()">
+                            生成卡片并复制文案 (分享到 IG)
+                        </button>
+                    </div>
+                    <div id="admin-actions" class="hidden mb-4">
                          <div class="flex items-center gap-3">
                              <button id="ig-publish-button" class="flex items-center gap-2 px-3 py-2 bg-pink-500 text-white rounded-lg shadow hover:bg-pink-600 transition" onclick="postToInstagram()">
                                  <span aria-hidden="true">📸</span>
@@ -921,6 +926,97 @@
                     publishBtn.textContent = '发布到 Instagram';
                 }
             }
+        };
+
+        window.shareToInstagramNative = async function() {
+            if (!resultsData) {
+                alert('暂无评分数据可分享。');
+                return;
+            }
+
+            const reviewer = resultsData.userNickname || 'Anonymous';
+            const cigarName = resultsData.cigarInfo?.name || '';
+            const origin = resultsData.cigarInfo?.origin || '';
+            const size = resultsData.cigarInfo?.size || '';
+            const rawScore = resultsData.normalizedScore;
+            const formattedScore = typeof rawScore === 'number'
+                ? (Number.isInteger(rawScore) ? rawScore.toString() : rawScore.toFixed(2))
+                : 'N/A';
+            const grade = resultsData.finalGrade?.grade || '';
+            const review = resultsData.cigarReview || '';
+
+            const shareText = `New Review by ${reviewer}:
+Cigar: ${cigarName}
+Origin: ${origin} | Size: ${size}
+Score: ${formattedScore} - Grade: ${grade}
+"${review}"---${reviewer}
+
+Check out the full rating on www.pista-cho.com
+
+“P”innacle---------95-100
+“I”mpeccable------90-94
+“S”uperior---------80-89
+“T”errific----------70-79
+“A”ppreciable-----60-69
+“C”ommonplace---50-59
+“H”esitant---------30-49
+“O”bjectionable---0-29
+
+#Cigarphotography #cigarboss #cigarculture #cigarette #cigarlounge #cigarreview`;
+
+            try {
+                await navigator.clipboard.writeText(shareText);
+                alert('文案已复制！请在 Instagram 粘贴');
+            } catch (error) {
+                console.error('复制文案失败:', error);
+                alert('无法自动复制文案，请手动复制后分享。');
+            }
+
+            const capture = await captureShareCardImage();
+            if (!capture || (!capture.blob && !capture.imageSrc)) {
+                alert('分享卡片生成失败，请稍后重试。');
+                return;
+            }
+
+            let shareBlob = capture.blob;
+            if (!shareBlob && capture.imageSrc) {
+                try {
+                    const response = await fetch(capture.imageSrc);
+                    shareBlob = await response.blob();
+                } catch (error) {
+                    console.error('无法获取分享图片 Blob:', error);
+                }
+            }
+
+            if (!shareBlob) {
+                alert('分享卡片生成失败，请稍后重试。');
+                return;
+            }
+
+            const shareFile = new File([shareBlob], 'pistacho-rating.png', { type: 'image/png' });
+            const canUseNativeShare = typeof navigator.share === 'function'
+                && (!navigator.canShare || navigator.canShare({ files: [shareFile] }));
+
+            if (canUseNativeShare) {
+                try {
+                    await navigator.share({ files: [shareFile], title: 'Pistacho Rating' });
+                    return;
+                } catch (error) {
+                    console.warn('系统分享失败，尝试回退下载。', error);
+                }
+            }
+
+            const downloadUrl = capture.objectUrl || URL.createObjectURL(shareBlob);
+            const anchor = document.createElement('a');
+            anchor.href = downloadUrl;
+            anchor.download = 'pistacho-rating.png';
+            document.body.appendChild(anchor);
+            anchor.click();
+            anchor.remove();
+            if (!capture.objectUrl) {
+                setTimeout(() => URL.revokeObjectURL(downloadUrl), 5000);
+            }
+            alert('当前设备不支持系统分享，已为你下载图片。');
         };
 
         async function performPublish(imageKeys) {
