--- a/results.html
+++ b/results.html
@@ -242,8 +242,8 @@
                          <span><span data-i18n="resultsPage.origin">产地</span>: <strong id="cigar-origin"></strong></span>
                      </div>
                     <div class="mb-4">
-                        <button id="ig-native-share-button" class="w-full md:w-auto px-4 py-3 text-white font-semibold rounded-lg shadow-lg bg-gradient-to-r from-orange-500 via-pink-500 to-purple-600 hover:shadow-xl transition-transform transform hover:-translate-y-0.5 focus:outline-none focus:ring-2 focus:ring-pink-200" onclick="shareToInstagramNative()">
-                            生成卡片并复制文案 (分享到 IG)
+                        <button id="ig-native-share-button" class="w-full md:w-auto px-3 py-2 text-sm text-white font-semibold rounded-lg shadow-lg bg-gradient-to-r from-orange-500 via-pink-500 to-purple-600 hover:shadow-xl transition-transform transform hover:-translate-y-0.5 focus:outline-none focus:ring-2 focus:ring-pink-200" onclick="shareToInstagramNative()">
+                            分享这篇评分
                         </button>
                     </div>
                     <div id="admin-actions" class="hidden mb-4">
